--- a/webapp/webpages.css
+++ b/webapp/webpages.css
@@ -11,7 +11,7 @@
 			height: 100%;
 		}
 		.left {
-			width: 20%;
+			width: 15%;
 			padding: 40px;
 			display: flex;
 			flex-direction: column;
@@ -34,12 +34,13 @@
 			margin-bottom: 5px;
 			color: #333;
 		}
-		input[type="text"] {
+		input[type="text"], select {
 			padding: 10px;
 			border: none;
 			border-radius: 5px;
 			margin-bottom: 20px;
 			box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+			background-color: white;
 		}
 		button[type="submit"] {
 			padding: 10px 20px;
@@ -57,9 +58,11 @@
 			background-color: #3E8E41;
 		}
 		.right {
-			width: 80%;
+			width: 85%;
 			background-color: #FFF;
 			background-image: url("https://images.unsplash.com/photo-1505826759037-406b40feb5d6");
 			background-size: cover;
 			background-position: center;
 		}
+
+		
