admin html done

--- a/webapp/admin.css
+++ b/webapp/admin.css
@@ -98,3 +98,63 @@ button[type="button"]:hover {
   .actions-container button:hover {
     background-color: #0062a3;
   }
+
+  #popup {
+    border-radius: 25px;
+    border: 2px solid rgb(60 60 60);
+    background: #f4f4f4;
+    padding: 20px;
+    padding-top: 15px;
+    margin-bottom: 10px;
+    width: 700px;
+    height: 400px;
+    position: fixed;
+    top: 25%;
+    left: 30%;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+  
+  .object-container {
+    margin-bottom: 10px; /* Add some spacing between object containers */
+  }  
+  .object-container a{
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  #dialog-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  #dialog {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    background-color: white;
+    padding: 20px;
+    width: 581px;
+  }
+
+  #idk{
+    display: flex;
+  }
+
+  .messages-conatiner a{
+    display: block;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
+  .messages-conatiner{
+    padding-top: 40%;
+    margin-left: 57px;
+  }
